# advent-of-code

./: .gitignore  build.gradle
2022/go/: main.go
2022/go/solution/: day1.go  day2.go
2022/kotlin/: day1.kt  day10.kt  day11.kt  day12.kt  day13.kt  day14.kt  day15.kt  day16.kt  day17.kt  day18.kt  day2.kt  day20.kt  day21.kt  day22.kt  day24.kt  day2b.kt  day3.kt  day4.kt  day5.kt  day6.kt  day7.kt  day8.kt  day9.kt
2022/kotlin/linalg/: Vector2.kt  Vector3.kt
2022/swift/: day6.swift
2023/advent_of_rust/: Cargo.toml
2023/advent_of_rust/src/: main.rs
2023/advent_of_rust/src/solutions/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_17_dij.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_22_szeweq.rs  day_23.rs  day_23_thylacine.rs  day_24.rs
2023/advent_of_rust/src/util/: direction.rs  matrix.rs  queue.rs
2023/godot/: icon.svg.import  project.godot
2023/godot/.godot/: global_script_class_cache.cfg
2023/godot/.godot/editor/: create_recent.Node  display.tscn-editstate-61569f49df2367cf1dce2a55a2e8fabf.cfg  editor_layout.cfg  filesystem_cache8  (+9 more)
2023/godot/font/: Monocode-Regular-V01.02b.ttf.import
2023/godot/src/: display.gd  display.tscn  main.gd  main.tscn  pattern.gd  rocks.gd  rocks.tscn
2024/: build.gradle  settings.gradle
2025/joyful-velvet-mistletoe/: .gitignore  build.gradle.kts  gradle.properties  lombok.config  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
(+146 files in other folders)
